[project]
name = "olas"
version = "0.3.1"
description = "Library with wave tools like ESTELA"
authors = [
    { name = "Jorge Perez", email = "j.perez@metocean.co.nz" },
]
license = "MIT"
readme = "README.md"
keywords = ["waves", "xarray", "ESTELA"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "xarray >=2023.1.0",
    "dask[dataframe,diagnostics,distributed] >=2023.3.1",
    "scipy >=1.10.1",
    "numpy >=1.24.2",
    "matplotlib >=3.7.1",
    "netcdf4 >=1.6.3",
    "cartopy >=0.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest >=7.2.2",
    "ipython >=8.11.0",
    "mkdocs-material >=9",
]

[project.scripts]
estela = "olas.estela:parser"

[project.urls]
homepage = "https://github.com/jorgeperezg/olas"
repository = "https://github.com/jorgeperezg/olas"
documentation = "https://jorgeperezg.github.io/olas"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
